Fix navbar breaking down on narrow devices
Close #13

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -28,13 +28,13 @@
             display: inline-block;
             float: left;
             height: 40px;
-            width: 194px;
+            width: 150px;
         }
 
         > span {
             display: inline-block;
             font-size: 14.4pt;
-            padding: 11px 0 0 10px;
+            padding: 10px 0 0 10px;
         }
     }
     .navbar-collapse {
